--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "\n",
     "tweets_path = 'Tweets/bitcoin/'\n",
-    "crypto_name = 'bitcoin' # bitcoin, ethereum, bitcoincash, ripple or litecoin"
+    "crypto_name = 'bitcoin'
    ]
   },
   {
